@@ -2,6 +2,8 @@
 
         * R/plotseries.R (plotseries.default): compute
         returns only if required for labels
+        (plotseries.default): reset graphical parameters
+        on exit
         (.spread_labels): set trade-off overlap/distance to
         best position to 2, i.e. overlap is twice as bad as
         distance
